<resources>
    <string name="app_name">Ergometer Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="ErgometerTitle">Ergometer</string>
    <string name="PaceCalculatorTitle">Calculator</string>
    <string name="button_pace">Calculate Pace</string>
    <string name="button_watt">Calculate Watts</string>
    <string name="title_activity_pace_calculator">PaceCalculator</string>

    <string name="PaceCalculator">Pace Calculator</string>
    <string name="title_activity_watt_calculator">WattCalculator</string>

    <string name="title_activity_calorie_calculator">CalorieCalculator</string>
    <string name="PaceSplitButton">Calculate Split</string>
    <string name="PaceDistanceButton">Calculate Distance</string>
    <string name="PaceTimeButton">Calculate Time</string>
    <string name="title_activity_split">Split</string>

    <string name="title_activity_distance">Distance</string>
    <string name="title_activity_time">Time</string>
    <string name="Time">Time (mm:ss)</string>
    <string name="Distance">Distance (meters)</string>
    <string name="d_Distance">Distance (meters)</string>
    <string name="d_Split">Pace per 500m</string>
    <string name="d_Time">Time (mm:ss)</string>

    <string name="t_Time">Time (mm:ss)</string>
    <string name="t_Pace">Pace per 500m</string>

    <string name="WattCalculator">Watts Calculator</string>
    <string name="PaceToWattsButton">Split to Watts</string>
    <string name="WattsToPaceButton">Watts to Split</string>

    <string name="title_activity_watts_to_pace">WattsToPace</string>

    <string name="title_activity_pace_to_watts">PaceToWatts</string>
    <string name="p_Watts">Watts (W)</string>
    <string name="p_Pace">Pace per 500m (mm:ss:ms)</string>

    <string name="w_Watts">Watts (W)</string>
    <string name="w_Pace">Pace per 500m (mm:ss:ms)</string>
    <string name="s_Pace">Pace per 500m</string>
</resources>
