<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context="com.ergpacecalculator.PaceCalculator">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/PaceCalculator"
        android:id="@+id/PaceCalculator"
        android:textSize="40sp"
        android:layout_marginTop="22dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/PaceSplitButton"
        android:id="@+id/PaceSplitButton"
        android:layout_marginTop="10dp"
        android:onClick="onClickSplit"
        android:layout_weight="2"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/PaceDistanceButton"
        android:id="@+id/PaceDistanceButton"
        android:layout_marginTop="10dp"
        android:onClick="onClickDistance"
        android:layout_weight="2"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/PaceTimeButton"
        android:id="@+id/PaceTimeButton"
        android:layout_marginTop="10dp"
        android:onClick="onClickTime"
        android:layout_weight="2"/>
</LinearLayout>
