<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/erg" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="-35sp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ErgometerTitle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/PaceCalculatorTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <Button
            android:id="@+id/button_pace"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClickPace"
            android:text="@string/button_pace" />

        <Button
            android:id="@+id/button_watt"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onClickWatt"
            android:text="@string/button_watt" />
    </LinearLayout>

</LinearLayout>
