<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ergpacecalculator.WattCalculator">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/WattCalculator"
        android:id="@+id/WattCalculator"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="195dp"
        android:text="@string/PaceToWattsButton"
        android:id="@+id/PaceToWattsButton"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/WattCalculator"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClickPtW"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="195dp"
        android:text="@string/WattsToPaceButton"
        android:id="@+id/WattsToPaceButton"
        android:layout_below="@+id/PaceToWattsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:layout_alignParentEnd="true"
        android:onClick="onClickWtP"
        android:layout_alignParentRight="true" />

</RelativeLayout>
