<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ergpacecalculator.Split">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:00"
                android:id="@+id/splitOutput"
                android:layout_marginTop="56dp"
                android:textSize="84dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/s_Pace"
                android:id="@+id/textView3"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:text="Calculate"
                android:id="@+id/CalculateSplitButton"
                android:onClick="calculate"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/distanceInput"
                android:textSize="36sp"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Distance"
                android:id="@+id/s_distance"
                android:layout_gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="95dp"
                    android:text="00"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:textSize="36sp"
                    android:gravity="end"
                    android:id="@+id/mTimeInput" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textSize="36sp"/>
                <EditText
                    android:layout_width="95dp"
                    android:text="00"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:textSize="36sp"
                    android:id="@+id/sTimeInput" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/Time"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
